--- a/assessment.html
+++ b/assessment.html
@@ -3,23 +3,49 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="twitter:card" content="summary">
-<meta property="og:url" content="https://zakikuma730.github.io/assessment/assessment.html">
-<meta property="og:title" content="あなたのいいところ診断">
-<meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。">
+    <meta property="og:url" content="https://zakikuma730.github.io/assessment/assessment.html">
+    <!--githubでページ公開するのに必要なもの-->
+    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--デバイスによって幅を自動で変えるというもの-->
     <title>あなたのいいところ診断</title>
-    <link rel="stylesheet" href="assessment.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!--
+    Bootstrapを使えるようにする。
+    BootstrapはCSSの代わりに使ってclassでデザインを指定できる。
+-->
 </head>
 
 <body>
+    <header><!--ヘッダーの設定-->
+        <nav class="navbar navbar-dark bg-dark"><!--Navbar(ナビゲーションバー)スタイルを使う-->
+        <div class="container-fluid"><!--外枠の範囲を決める　fluidは画面いっぱいに常に広がる-->
+            <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+            <!--navbar-brandはテキストを追加するのに使う-->
+        </div>
+    </nav>
+    </header>
+    <div class="container pt-5"><!--containerは外枠の範囲を決める　pt-5は相対値で固定値決める-->
     <h1>あなたのいいところは？</h1>
     <p>診断したい名前を入れてください</p>
-    <input type="text" id="user-name" size="40" maxlength="20">
-    <button id="assessment">診断する</button>
+    <div class="input-group mb-3" style="max-width: 500px">
+        <!--
+            input-groupは入力フォームを使うよて意味
+            mbは空白(margin)えお要素の下部(buttom)に追加するって意味
+            ３は相対的な大きさ
+        -->
+    <input type="text" class="form-control" id="user-name" size="40" maxlength="20" />
+    <!--
+        form-controlはテキスト入力フォームにスタイルを与える(サイズとか)
+        下のinput-group-textはテキストを追加するのに使う
+    -->
+    <button class="input-group-text" id="assessment">診断する</button>
+    </div>
     <div id="result-area"></div>
-    <div id="tweet-area"></div>
+    <div id="tweet-area" class="mt-3"></div>
+    </div>
     <script src="assessment.js"></script>
 </body>
 
