見出しを丁寧な表現に変更

--- a/assessment.html
+++ b/assessment.html
@@ -28,7 +28,7 @@
     </nav>
     </header>
     <div class="container pt-5"><!--containerは外枠の範囲を決める　pt-5は相対値で固定値決める-->
-    <h1>あなたのいいところは？</h1>
+    <h1>あなたのいいところを診断します。</h1>
     <p>診断したい名前を入れてください</p>
     <div class="input-group mb-3" style="max-width: 500px">
         <!--
